--- a/dev.ini
+++ b/dev.ini
@@ -2,7 +2,7 @@
 lb01  ansible_connection=local
     
 [webserver]
-app ansible_conenction=ssh ansible_host=206.189.80.237 ansible_user=root ansible_ssh_pass=Hello101!
+app ansible_host=206.189.80.237 ansible_user=root ansible_ssh_pass=Hello101!
 
 [database]
 db01 ansible_connection=local
