--- a/playbooks/setup_wordpress.yml
+++ b/playbooks/setup_wordpress.yml
@@ -1,8 +1,10 @@
 ---
-
-    - hosts: webserver 
-      vars:
-        wp_db_name: '{{wp_db_name}}'
+    - name: Installing wordpress
+      hosts: webserver 
+      vars_prompt:       
+        - name: wp_db_name
+          prompt: 'database name'
+          private: no
  
       tasks:
         #- name: install python
