--- a/inventory/dev.ini
+++ b/inventory/dev.ini
@@ -1,6 +1,5 @@
-[app]
-src ansible_connection=ssh ansible_host=159.65.12.44 ansible_user=root ansible_ssh_pass=Hello101!
-dest ansible_connection=ssh ansible_host=206.189.85.211 ansible_user=root ansible_ssh_pass=Hello101!
- 
+[webserver]
+app ansible_host=206.189.84.31 ansible_user=root ansible_ssh_pass=Hello101!
+
 [control]
 control ansible_connection=local
