--- a/playbooks/ftp_user/setup_host.yml
+++ b/playbooks/ftp_user/setup_host.yml
@@ -1,6 +1,6 @@
 ---
-    - name: Configuring host credentials
-      hosts: localhost
+#    - name: Configuring host credentials
+    - hosts: localhost
       gather_facts: false
       vars_prompt:
         - name: inv_host
@@ -23,9 +23,9 @@
             - 'user: {{inv_user}}'
             - 'pass: {{inv_pass}}'
         - name: removing existing inventory
-          raw: rm -rf ../inventory/dev.ini
+          raw: rm -rf ../../inventory/dev.ini
         - name: adding new inventory
           template:
-            src: ../templates/dev.ini.j2
-            dest: ../inventory/dev.ini
+            src: ../../templates/wordpress/dev.ini.j2
+            dest: ../../inventory/dev.ini
 
