--- a/playbooks/wordpress/setup_wordpress.yml
+++ b/playbooks/wordpress/setup_wordpress.yml
@@ -1,12 +1,18 @@
 ---
     - name: Installing wordpress
-      hosts: webserver 
+      hosts: webserver
+      gather_facts: false
       vars_prompt:       
         - name: wp_db_name
           prompt: 'database name'
           private: no
- 
+        - name: wp_path
+          prompt: 'path (eg. /var/www/test)'
+          private: no
+      roles:
+        - python 
       tasks:
+
         #- name: install python
         #  raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
         
@@ -22,18 +28,18 @@
         #    state: absent
         
         - name: remove nginx conf default files
-          raw: rm -rf /etc/nginx/sites-available/*        
+          raw: rm -rf /etc/nginx/sites-enabled/*       
         
         - name: configure nginx add custom conf
           template:
-            src: ../templates/nginx.conf.j2 
-            dest: /etc/nginx/sites-available/nginx.conf
+            src: ../../templates/wordpress/nginx.conf.j2 
+            dest: /etc/nginx/sites-available/wp-nginx.conf
           notify: restart nginx
         
         - name: configure nginx link those shit
           file:
-            src: /etc/nginx/sites-available/nginx.conf
-            dest: /etc/nginx/sites-enabled/nginx.conf
+            src: /etc/nginx/sites-available/wp-nginx.conf
+            dest: /etc/nginx/sites-enabled/wp-nginx.conf
             state: link
           notify: restart nginx
         
@@ -75,20 +81,20 @@
           with_items:
             - 'wget -c http://wordpress.org/latest.tar.gz'
             - 'tar -xzvf latest.tar.gz'
-            - 'rsync -av wordpress/* /var/www/html/'
+            - 'rsync -av wordpress/* {{wp_path}}/'
 
         
         - name: configure wp remove existing wp-config
           template:
-            src: ../templates/wp-config.php.j2
-            dest: /var/www/html/wp-config.php
+            src: ../../templates/wordpress/wp-config.php.j2
+            dest: '{{wp_path}}/wp-config.php'
           notify: restart nginx
 
         - name: Set permission
           raw: '{{item}}'
           with_items:
-            - 'chown -R www-data:www-data /var/www/html/'
-            - 'chmod -R 755 /var/www/html/'
+            - 'chown -R www-data:www-data {{wp_path}}/'
+            - 'chmod -R 755 {{wp_path}}/'
 
     
       handlers:
