--- a/inventory/dev.ini
+++ b/inventory/dev.ini
@@ -1,5 +1,6 @@
-[webserver]
-app ansible_host=178.128.20.90 ansible_user=root ansible_ssh_pass=Hello101!
-
+[app]
+src ansible_connection=ssh ansible_host=68.183.239.92 ansible_user=root ansible_ssh_pass=Hello101!
+dest ansible_connection=ssh ansible_host=178.128.20.90 ansible_user=root ansible_ssh_pass=Hello101!
+ 
 [control]
 control ansible_connection=local
