--- a/playbooks/migrate/host.yml
+++ b/playbooks/migrate/host.yml
@@ -23,9 +23,9 @@
     - hosts: localhost
       tasks:
         - name: removing existing inventory
-          raw: rm -rf ../inventory/dev.ini
+          raw: rm -rf ../../inventory/dev.ini
         - name: adding new inventory
           template:
-            src: ../templates/migrate/migrate.ini.j2
-            dest: ../inventory/dev.ini
+            src: ../../templates/migrate/migrate.ini.j2
+            dest: ../../inventory/dev.ini
 
